--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -13,7 +13,8 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "eslint": "^8.16.0",
